--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,10 @@ main > h1 {
   text-align: center;
   font-size: 3.5em;
 }
+
+.container-fluid {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
