--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,8 @@ html, body {
 
 main {
   margin: auto;
-  width: 50%;
-  padding: 20px;
+  width: auto;
+  padding: 30px;
 }
 
 main > h1 {
@@ -26,3 +26,4 @@ main > h1 {
   margin-right: auto;
   margin-left: auto;
 }
+
